refactor code as per review
Signed-off-by: Saad Khan <saakhan@ibm.com>