@@ -744,53 +744,8 @@ public class AnalyzerConstants {
             }
         }
 
-        public static final class TunablesConstants {
-            private TunablesConstants() {}
-
-            // Container tunables
-            public static final String MEMORY_LIMIT = "memoryLimit";
-            public static final String CPU_LIMIT =  "cpuLimit";
-            // Hotspot tunables
-            public static final String MAX_RAM_PERC = "MaxRAMPercentage";
-            public static final String GC_POLICY = "GCPolicy";
-            // Quarkus tunables
-            public static final String CORE_THREADS = "quarkus.thread-pool.core-threads";
-        }
-
         private LayerConstants() {
         }
-    }
-
-    public static final class RecommendationConstants {
-        public static final double MEMORY_THRESHOLD_G1GC = 4096.0;
-        public static final int CPU_CORES_THRESHOLD_SERIAL = 1;
-        public static final int CPU_CORES_THRESHOLD_PARALLEL = 2;
-        public static final double RAM_PERCENTAGE_THRESHOLD_BELOW_ONE_CPU_CORE = 10.0;
-        public static final double RAM_PERCENTAGE_THRESHOLD_ONE_CPU_CORE = 5.0;
-	public static final double RAM_PERCENTAGE_THRESHOLD_256MB = 256.0;
-        public static final double RAM_PERCENTAGE_THRESHOLD_512MB = 512.0;
-        public static final double RAM_PERCENTAGE_THRESHOLD_4096MB = 4096.0;
-        public static final double RAM_PERCENTAGE_THRESHOLD_8192MB = 8192.0;
-
-
-        public static final double MEMORY_THRESHOLD_BALANCED_GC = 4096.0;
-        public static final int THREADS_PER_CORE = 1;
-        public static final int MIN_CORE_THREADS = 1;
-        public static final int MAX_CORE_THREADS = 100;
-
-        // GC Policy
-        public static final String GC_BALANCED = "-Xgcpolicy:balanced";
-        public static final String GC_GENCON = "-Xgcpolicy:gencon";
-        public static final String GC_SERIAL = "-XX:+UseSerialGC";
-        public static final String GC_PARALLEL = "-XX:+UseParallelGC";
-        public static final String GC_ZGC = "-XX:+UseZGC";
-        public static final String GC_SHENANDOAH = "-XX:+UseShenandoahGC";
-        public static final String GC_G1GC = "-XX:+UseG1GC";
-
-        // JDK version thresholds
-        public static final int JDK_VERSION_SHENANDOAH = 11;
-        public static final int JDK_VERSION_ZGC = 17;
-        public static final int JDK_VERSION_SERVER_FLAG_THRESHOLD = 8;
     }
 
     /**
@@ -879,7 +834,6 @@ public class AnalyzerConstants {
         public static final String USE_STRING_DEDUPLICATION = "UseStringDeduplication";
         public static final String USE_SUPER_WORD = "UseSuperWord";
         public static final String USE_TYPE_SPECULATION = "UseTypeSpeculation";
-        public static final Integer MAX_RAM_PERCENTAGE_VALUE = 80;
 
         private HotspotConstants() {
         }
@@ -1056,7 +1010,6 @@ public class AnalyzerConstants {
         public static final String MEMORY_LIMIT = "memoryLimit";
         public static final String MEMORY_USAGE = "memoryUsage";
         public static final String MEMORY_RSS = "memoryRSS";
-        public static final String GPU = "gpu";
 
         private MetricNameConstants() {
 
